wk_taa_taaqa/src/objects/ERP_Order_Line_Item__c.object
<CustomObject>
    <description>Holds order line item data that is necessary for the ERP and downstream accounting systems. This object does not hold fulfillment or other data necessary for other system actions: license provisioning, printing, commissioning, etc</description>
    <fields>
        <fullName>ERP_Order__c</fullName>
        <description>Parent Order object</description>
        <label>ERP Order</label>
        <referenceTo>ERP_Order__c</referenceTo>
        <relationshipLabel>ERP Order Line Items</relationshipLabel>
        <relationshipName>ERP_Order_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Item_Sequence__c</fullName>
        <label>Item Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <label>Line Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_Type__c</fullName>
        <description>Proposal Line Type</description>
        <inlineHelpText>Proposal Line Type</inlineHelpText>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product/Service</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Option</fullName>
                </value>
                <value>
                    <fullName>Misc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Adjustment__c</fullName>
        <label>Net Adjustment(%)</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Net_Price__c</fullName>
        <label>Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parent_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Parent Product of the Product/Line Item</description>
        <label>Parent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>ERP Order Line Items (Component Product)</relationshipLabel>
        <relationshipName>ERP_Order_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>ERP Order Line Items</relationshipLabel>
        <relationshipName>ERP_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <label>Promo Code</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_2_Net_Price__c</fullName>
        <label>Year 2 Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_3_Net_Price__c</fullName>
        <label>Year 3 Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_4_Net_Price__c</fullName>
        <label>Year 4 Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>ERP Order Line Item</label>
    <nameField>
        <displayFormat>OL-{0000000000}</displayFormat>
        <label>ERP Order Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ERP Order Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>